# godmode-chat

./: README.md  app.py  config.yaml  pyproject.toml  setup.py
backend/: app.py
src/: App.css  App.js
src/godmode/: __init__.py  utils.py
